tests/ui/suggestions/suggest-mut-method-for-loop-hashmap.stderr
error[E0594]: cannot assign to `v.v`, which is behind a `&` reference
  --> $DIR/suggest-mut-method-for-loop-hashmap.rs:17:9
   |
LL |     for (_k, v) in map.iter() {
   |                    ----------
   |                    |   |
   |                    |   help: use mutable method: `iter_mut()`
   |                    this iterator yields `&` references
...
LL |         v.v += 1;
   |         ^^^^^^^^ `v` is a `&` reference, so the data it refers to cannot be written

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0594`.
